--- a/_javascript/t9.md
+++ b/_javascript/t9.md
@@ -13,14 +13,14 @@ Precisamos unha carpeta á que imos chamar **tarefa9_bucles** que terá coma sem
 
 A sintaxe do bucle `for` é un tanto enrevesada: dentro de paréntese, con puntos e comas polo medio, de súpeto esa _cruz_ repetida. Imos paseniño, falámolo na aula. Coma sempre tratade de entender o que pasa:
 
-```js
+{% highlight javascript linenos %}
 document.write('<h2> Bucle FOR </h2>');
 
 document.write('<h3> ☞ Facer algo cinco veces </h3>');
 for (var i=1; i<= 5; i++) {
 	document.write('<p> Había una vez un barquito chiquitito... </p>');
 }
-```
+{% endhighlight %}
  ✏️ Cambios interesantes: 
 
 ► que pasa se en troques de 5 pos 27 ?
@@ -31,12 +31,12 @@ for (var i=1; i<= 5; i++) {
 
 Temos que sacar máis partido desa variable. Pedímoslle que non vaia dicindo canto vale.
 
-```js
+{% highlight javascript linenos %}
 document.write('<h3> ☞ Outra canción infantil </h3>');
 for (var i=2; i<= 10; i++) {
 	document.write(i +' 🐘 se balanceaban sobre la tela... ');
 }
-```
+{% endhighlight %}
 
 ✏️ Cambios interesantes: 
 
@@ -46,12 +46,12 @@ for (var i=2; i<= 10; i++) {
 ### 🖥 Código 3
 Tanto teclear código e vai ser xusto no seguinte onde aprendemos a contar:
 
-```js
+{% highlight javascript linenos %}
 document.write('<h3> ☞ Aprender a contar ata 10 </h3>');
 for (var i=0; i<= 10; i++) {
 	document.write(i + ', ');
 }
-```
+{% endhighlight %}
 
 ✏️ Cambios interesantes: 
 
@@ -63,12 +63,12 @@ for (var i=0; i<= 10; i++) {
 
 Pegando saltitos:
 
-```js
+{% highlight javascript linenos %}
 document.write('<h3> ☞ Aprender a contar ata 44 de cinco en cinco comezando en 10 </h3>');
 for (var i=10; i<= 44; i=i+5) {
 	document.write(i +', ');
 }
-```
+{% endhighlight %}
 ✏️ Cambios interesantes: 
 
 ► modifica todo para que nos dea a lista de números pares
