--- a/_javascript/t9.md
+++ b/_javascript/t9.md
@@ -29,7 +29,7 @@ for (var i=1; i<= 5; i++) {
 
 ### 🖥 Código 2
 
-Temos que sacar máis partido desa variable. Pedímoslle que non vaia dicindo canto vale.
+Temos que sacar máis partido desa variable. Pedímoslle que nos vaia dicindo canto vale.
 
 ```js
 document.write('<h3> ☞ Outra canción infantil </h3>');
