--- a/_javascript/t0.md
+++ b/_javascript/t0.md
@@ -34,4 +34,4 @@ Calca no *.html* para ver a pinta da páxina web no navegador. Non parece moi in
 ### O teu traballo
 
 1. Crea un novo repositorio no teu GitHub que se chame `JavaScript`
-2. Fabrica a túa propia plantilla para usar  cun *.html* outro *.css* e un *.js* Súbea ó teu repositorio para tela a man.
+2. Fabrica a túa propia plantilla para usar  cun *.html* outro *.css* e un *.js* Súbea ao teu repositorio para tela a man.
