--- a/_javascript/t02.md
+++ b/_javascript/t02.md
@@ -24,7 +24,7 @@ No ficheiro *.js* tecleamos a seguinte liña de código:
 
 No código declaramos unha variable chamada `gastoHoxe` e démoslle o valor 10
 
-*Vale 👍🏽... tamén se pode poñer de golpe var gastoHoxe=10;👍🏽*
+*Vale 👍... tamén se pode poñer de golpe var gastoHoxe=10;👍*
 
 ### 🎞 Visualizar o javascript
 
@@ -47,6 +47,7 @@ Inventa todas as variacións que se te ocurran: con sumas, decimais, restas, mul
 
 Fai as túas anotacións.
 
-### 🤓 Avanzado:
+###
+ 🤓 Avanzado:
 
 [https://codepen.io/nominalaeon/post/using-variable-declarations-to-improve-readability](https://codepen.io/nominalaeon/post/using-variable-declarations-to-improve-readability)
