--- a/_javascript/t03.md
+++ b/_javascript/t03.md
@@ -4,7 +4,7 @@ title: Tarefa 3 - Mates
 ---
 ### Máis  contas nas librerías
 
-E como se fai unha raíz cadrada? Benvidos ó fascinante mundo das bibliotecas (ou librerías) das linguaxes de programación.
+E como se fai unha raíz cadrada? Benvidos ao fascinante mundo das bibliotecas (ou librerías) das linguaxes de programación.
 
 ### 🧺 Preparación
 
@@ -40,7 +40,7 @@ Investiga ti por internet un chisco na biblioteca `Math`
 - A función que responde coa menor das variables
 - Unha función que xenera un número aleatorio entre cero e tres
 
-Sube ó teu repositorio en GitHub nunha carpeta á que chamaremos **tarefa3_mates** que conteña un *.js* que mostre todos os puntos pedidos
+Sube ao teu repositorio en GitHub nunha carpeta á que chamaremos **tarefa3_mates** que conteña un *.js* que mostre todos os puntos pedidos
 
 ## Precisas axuda?
 
