--- a/_javascript/t06.md
+++ b/_javascript/t06.md
@@ -45,4 +45,4 @@ Calcamos no *.html* e debería abrirse o navegador mostrando o resultado do noso
 
 Como se fará para que na alerta do código 1 para mostre que é medalla de bronce? 
 
-Como melloramos o código 1 para preguntar ó usuario cal é a posición na que quedou e que nunha alerta indique cal é a medalla que lle corresponde
+Como melloramos o código 1 para preguntar ao usuario cal é a posición na que quedou e que nunha alerta indique cal é a medalla que lle corresponde
