--- a/_javascript/t08.md
+++ b/_javascript/t08.md
@@ -26,8 +26,8 @@ Calcamos no *.html*  de cada exercicio. Debería abrirse o navegador mostrando o
 
 1. Prepara unha carpeta coma sempre, chamada **tarefa8_medallista**.
 2. Fabrica unha función que ten de parámetro  de entrada a posición na que quedou un atleta e devolve o tipo de medalla que se lle concede.
-3. Pregunta ó usuario cal é a posición na que quedou.
+3. Pregunta ao usuario cal é a posición na que quedou.
 4. Chama á función pasándolle a resposta do usuario.
 5. Mostra na páxina web a posición do atleta e  o tipo de medalla que lle deron
 
-Sube ó teu repositorio a carpeta deste proxecto chamada **tarefa8_medallista**
+Sube ao teu repositorio a carpeta deste proxecto chamada **tarefa8_medallista**
