--- a/_javascript/t09.md
+++ b/_javascript/t09.md
@@ -1,6 +1,6 @@
 ---
 layout: javascript
-title: Tarefa 9 - Bucles ou lazos
+title: Tarefa 9 - Cantando con bucles
 ---
 Repetir e repetir... menudo aburrimento, para eso están as maquinas!!! Nós pola nosa banda imos cantar e lembrar a infancia 😉
 
@@ -24,7 +24,7 @@ for (var i=1; i<= 5; i++) {
  ✏️ Cambios interesantes: 
 
 ► que pasa se en troques de 5 pos 27 ?
-► e se non repites o signo máis e pos dous menos inicializando a variable a 7 ?
+► e se non repites o signo máis e pos dous signos menos inicializando a variable a 7 ?
 
 
 ### 🖥 Código 2
