--- a/_javascript/t05.md
+++ b/_javascript/t05.md
@@ -48,11 +48,11 @@ Haberá que transformar o que di o usuario nun número se queremos facer contas 
 
 1. Prepara unha carpeta coma sempre, chamada **tarefa5_ducias2ovos**
 2. Declara unha variable na que gardar as ducias. 
-3. Pregunta ó usuario cantas ducias de ovos leva unha tortilla usando `prompt();`. Convirte a resposta do usuario a número con `parseInt();`
+3. Pregunta ao usuario cantas ducias de ovos leva unha tortilla usando `prompt();`. Convirte a resposta do usuario a número con `parseInt();`
 4. Mostra nunha alerta o que dixo o usuario convertido a número.
 5. Fai a conta correspondente para saber cantos ovos leva esa megatortilla.
 6. Mostra nunha alerta o resultado do número de ovos
 
-Sube ó teu repositorio a carpeta deste proxecto chamada **tarefa5_ducias2ovos**
+Sube ao teu repositorio a carpeta deste proxecto chamada **tarefa5_ducias2ovos**
 
 Quen pasa de ducias a ovos pasa tamén de km a metros ou de euros a dólares.... 
