--- a/_javascript/t10.md
+++ b/_javascript/t10.md
@@ -24,7 +24,7 @@ while (numerito <=10){
 
 ► que pasa se poñemos `numerito++;` xusto de primeiro entre chaves?
 
-► se non repites o signo máis e pos dous signos menos que tes que modificar para non entrar nun bucle infindo?
+► se non repites o signo máis e pos dous signos menos, que tes que modificar para non entrar nun bucle infindo?
 
 
 ### 🖥 Código 2
