--- a/_javascript/t10.md
+++ b/_javascript/t10.md
@@ -80,16 +80,16 @@ No meu repositorio en [GitHub chamado exerciciosJavascript](https://github.com/i
 
 Novidade: existe outro tipo de bucle que é o `switch-case` vas ter que usalo no seguinte proxecto:
 
-### ☁️   Proxecto de medallas olímpicas  ☁️
+### ☁️   Proxecto bancario  ☁️
 
 1. Prepara unha carpeta coma sempre, chamada **tarefa10_euro2yens**.
 2. Reutiliza as túas funcións de cambio de moneda. 
 3. O programa pregunta ao usuario que producto acaba de mercar. 
-4. O programa pregunta ao usuario  que moneda vai usar: euro ou yen.
-5. O programa pregunta ao usuario canto custa o producto.
+4. O programa pregunta ao usuario canto custa o producto.
+5. O programa pregunta ao usuario  que moneda usou: euro ou yen.
 6. O programa emprega a estrutura `switch-case` para chamar á función que calcula de euros a yens ou viceversa.
 7. Móstrase na páxina web o nome do producto, prezo en euros e prezo en yens.
-8. Pregúntase ao usuario se ten outro producto: se o ten convirte moeda, en caso contrario despídese. educadamente.
+8. Pregúntase ao usuario se ten outro producto: se o ten volve a comezar, en caso contrario despídese educadamente. Usando `while
 
 Sube ao teu repositorio a carpeta deste proxecto chamada **tarefa10_euro2yen**
 
