--- a/_javascript/t10.md
+++ b/_javascript/t10.md
@@ -1,6 +1,6 @@
 ---
 layout: javascript
-title: Tarefa 10 - Conto de while
+title: Tarefa 10 - Conto do while
 ---
 Xa sabemos de bucles e xogando chegamos ata os bucles infindos. Hai outro xeito de repetir unha parte do código, como no _cuento de la buena pipa._
 
@@ -89,7 +89,7 @@ Novidade: existe outro tipo de bucle que é o `switch-case` vas ter que usalo no
 5. O programa pregunta ao usuario  que moneda usou: euro ou yen.
 6. O programa emprega a estrutura `switch-case` para chamar á función que calcula de euros a yens ou viceversa.
 7. Móstrase na páxina web o nome do producto, prezo en euros e prezo en yens.
-8. Pregúntase ao usuario se ten outro producto: se o ten volve a comezar, en caso contrario despídese educadamente. Usando `while
+8. Pregúntase ao usuario se ten outro producto: se o ten volve a comezar, en caso contrario despídese educadamente. Usando `while`
 
 Sube ao teu repositorio a carpeta deste proxecto chamada **tarefa10_euro2yen**
 
