--- a/_javascript/t10.md
+++ b/_javascript/t10.md
@@ -6,7 +6,7 @@ Xa sabemos de bucles e xogando chegamos ata os bucles infindos. Hai outro xeito 
 
 ### 🧺 Preparación
 
-Precisamos unha carpeta á que imos chamar **tarefa9_while** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa: [ Tarefa 0: Crear infraestrutura](../t0)
+Precisamos unha carpeta á que imos chamar **tarefa10_while** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa: [ Tarefa 0: Crear infraestrutura](../t0)
 
 
 ### 🖥 Código 1 
@@ -29,7 +29,7 @@ while (numerito <=10){
 
 ### 🖥 Código 2
 
-Na hora de ir xantar ou merendar imos facer algo novo. Esa parella de signos `!=` significa _distinto._ Ese código vai preguntado ó usuario de que quere o bocata. Analizade ben o que indica. Cando rematará o bucle?
+Na hora de ir xantar ou merendar imos facer algo novo. Esa parella de signos `!=` significa _distinto._ Ese código vai preguntando ao usuario de que quere o bocata. Analizade ben o que indica. Cando rematará o bucle?
 
 ```js
 document.write('<h3> ☞ Preparar bocata </h3>');
