--- a/_javascript/t11.md
+++ b/_javascript/t11.md
@@ -2,23 +2,27 @@
 layout: javascript
 title: Tarefa 11 - DOM 
 ---
-Seguimos traballando no DOM que é relacionando o que se fai en _.hml_ co que programamos en _.js_ Dise que JavaScript é unha linguaxe dirixida por eventos. Falamos dos eventos, lembrades aquelo de `onclick`,`onmousever`hai moitísimos máis.
+Seguimos traballando no DOM que é a estrutura da páxina web. Agora traballaremos con  _.hml_ co que programamos en _.js_ 
+
+Dise que JavaScript é unha linguaxe dirixida por eventos, e nós xa falamos dos eventos, lembrades aquelo de `onclick`,`onmousever`hai moitísimos máis.
+
 ### 🧺 Preparación
 
-Precisamos unha carpeta á que imos chamar **tarefa11_botoncito** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa: [ Tarefa 0: Crear infraestrutura](../t0)
+Precisamos unha carpeta á que imos chamar **tarefa11_formulario** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa: [ Tarefa 0: Crear infraestrutura](../t0)
 
 
 ### 🖥 Código 1 
 
 Primeiro imos inserir un nadita de código JavaScript no mesmo _.html_  para facer probas rápidas. No ficheiro _index.html_ e deixando o _.js_ en branco, tecleamos:
 
-{% highlight html linenos%}
+```html
 <body>
 	<button onclick= "alert('😀 Moi ben 😃');">Que tal?</button>
 </body>
-{% endhighlight %}
+```
 
 Fixádevos ben: estou metendo unha alerta no medio dunha etiqueta de HTML. A etiqueta é coa que creamos un botón. No _.css_ podedes cambiarlle a pinta.
+
  ✏️ Cambios interesantes: 
 
 ► que pasa se poñemos `document.write` en troques da alerta?
@@ -29,7 +33,7 @@ Fixádevos ben: estou metendo unha alerta no medio dunha etiqueta de HTML. A eti
 
 Volvemos ó noso _.js_ e probamos todas estas liñas de código. Analizade ben como se vai liando a cousa: tres funcións: unha sen parámetros, outra con un e outra con dous. Chulísimo.
 
-{% highlight javascript linenos%}
+```javascript
 function presentar(){
 	var resposta  = prompt("Como te chamas?");
 	document.write("Sei que te chamas " + resposta)
@@ -45,8 +49,7 @@ function sumita (a,b) {
 document.write('<button onclick="sumita(3,5);">Canto son 3+5 ?</button>');
 document.write('<button onclick="ducias2ovos(10);">cantos ovos son 10 ducias? </button>');
 document.write('<button onclick="presentar();">Podo cotillear?</button>');
-
-{% endhighlight %}
+```
 
 Nestes casos as funcións teñen un nome rimbombante: *manexadores de eventos*
 
@@ -59,34 +62,35 @@ Nestes casos as funcións teñen un nome rimbombante: *manexadores de eventos*
 Queda fatal que `document.write();` invada a páxina!! Imos ver de solucionalo
 
 ### 🖥 Código 3 en .html
+
 No ficheiro _.html_ escribimos unha páxina web que teña varios `input`. Lembrades? pero engadíndolles un atributo `id`para nomealos:
-{% highlight html linenos%}
+```html
 <body>
-<h2> Todo un pouco: html, css, js</h2>
-<p>O teu nome: </p><input  id="nomecito">
-<p>O teu apelido: </p><input  id="apelidazo">
-<p>
-<button type="button" onclick="saudar()"> Enviar</button>
-</p>
-<p id="parrafada"></p>
+	<h2> Todo un pouco: html, css, js</h2>
+	<p>O teu nome: </p><input  id="nomecito">
+	<p>O teu apelido: </p><input  id="apelidazo">
+	<p>
+	<button type="button" onclick="saudar()"> Enviar</button>
+	</p>
+	<p id="parrafada"></p>
 </body>
-{% endhighlight %}
- ou sexa temos un  titulazo, varios parágrafos, barras de texto para que usuario teclee o seu nome e outro parágrafo de entrada non ten nada... polo de agora....
+``` 
+ou sexa temos un  titulazo, varios parágrafos, barras de texto para que usuario teclee o seu nome e outro parágrafo de entrada non ten nada... polo de agora....
 
  Admito que os nomes dos identificadores son un tanto chorra, pero asi queda claro o que fago con eles, penso eu.
 
 ### 🖥 Código 3 en .js
 
 Agora o código que vai no ficheiro _.js_ con funcións novas desas que veñen de fábrica. Mirade ben como colle javascript os valores que teclea o usuario no documento e mete nunha variable. 
-{% highlight javascript linenos%}
+```javascript
 function saudar() {
-  var nn = document.getElementById("nomecito").value;
-  var ap = document.getElementById("apelidazo").value;
+	var nn = document.getElementById("nomecito").value;
+	var ap = document.getElementById("apelidazo").value;
 
- document.getElementById("parrafada").innerHTML = "Benvido "+ ap + ", " + nn ;
-document.getElementById("parrafada").style.color =  "green";
+	document.getElementById("parrafada").innerHTML = "Benvido "+ ap + ", " + nn ;
+	document.getElementById("parrafada").style.color =  "green";
 }
-{% endhighlight %}
+```
 
 ✏️ Cambios interesantes: 
 
