--- a/_javascript/t11.md
+++ b/_javascript/t11.md
@@ -1,6 +1,6 @@
 ---
 layout: javascript
-title: Tarefa 11 - DOM 
+title: Tarefa 11 - Remexendo todo 
 ---
 Seguimos traballando no DOM que é a estrutura da páxina web. Agora traballaremos con  _.hml_ co que programamos en _.js_ 
 
