--- a/_javascript/t11.md
+++ b/_javascript/t11.md
@@ -17,7 +17,7 @@ Primeiro imos inserir un nadita de código JavaScript no mesmo _.html_  para fac
 
 ```html
 <body>
-	<button onclick= "alert('😀 Moi ben 😃');">Que tal?</button>
+	<button onclick="alert('😀 Moi ben 😃');">Que tal?</button>
 </body>
 ```
 
@@ -64,17 +64,19 @@ Queda fatal que `document.write();` invada a páxina!! Imos ver de solucionalo
 ### 🖥 Código 3 en .html
 
 No ficheiro _.html_ escribimos unha páxina web que teña varios `input`. Lembrades? pero engadíndolles un atributo `id`para nomealos:
+
 ```html
 <body>
 	<h2> Todo un pouco: html, css, js</h2>
-	<p>O teu nome: </p><input  id="nomecito">
-	<p>O teu apelido: </p><input  id="apelidazo">
+	<p> O teu nome: </p>  <input  id="nomecito">
+	<p> O teu apelido: </p>  <input  id="apelidazo">
 	<p>
-	<button type="button" onclick="saudar()"> Enviar</button>
+	<button onclick="saudar()"> Enviar  </button>
 	</p>
-	<p id="parrafada"></p>
+	<p id="parrafada">  </p>
 </body>
 ``` 
+
 ou sexa temos un  titulazo, varios parágrafos, barras de texto para que usuario teclee o seu nome e outro parágrafo de entrada non ten nada... polo de agora....
 
  Admito que os nomes dos identificadores son un tanto chorra, pero asi queda claro o que fago con eles, penso eu.
@@ -82,6 +84,7 @@ ou sexa temos un  titulazo, varios parágrafos, barras de texto para que usuario
 ### 🖥 Código 3 en .js
 
 Agora o código que vai no ficheiro _.js_ con funcións novas desas que veñen de fábrica. Mirade ben como colle javascript os valores que teclea o usuario no documento e mete nunha variable. 
+
 ```javascript
 function saudar() {
 	var nn = document.getElementById("nomecito").value;
