--- a/_javascript/t11.md
+++ b/_javascript/t11.md
@@ -61,7 +61,7 @@ Nestes casos as funcións teñen un nome rimbombante: *manexadores de eventos*
 
 Queda fatal que `document.write();` invada a páxina!! Imos ver de solucionalo
 
-### 🖥 Código 3 en .html
+### 🖥 Código 3 (Parte 1 en .html)
 
 No ficheiro _.html_ escribimos unha páxina web que teña varios `input`. Lembrades? pero engadíndolles un atributo `id` para nomealos:
 
@@ -81,7 +81,7 @@ ou sexa temos un  titulazo, varios parágrafos, barras de texto para que usuario
 
  Admito que os nomes dos identificadores son un tanto chorra, pero asi queda claro o que fago con eles, penso eu.
 
-### 🖥 Código 3 en .js
+### 🖥 Código 3 (Parte 2 en .js)
 
 Agora o código que vai no ficheiro _.js_ con funcións novas desas que veñen de fábrica. Mirade ben como colle javascript os valores que teclea o usuario no documento e mete nunha variable. 
 
