--- a/_javascript/t11.md
+++ b/_javascript/t11.md
@@ -4,7 +4,7 @@ title: Tarefa 11 - Remexendo todo
 ---
 Seguimos traballando no DOM que é a estrutura da páxina web. Agora traballaremos con  _.hml_ co que programamos en _.js_ 
 
-Dise que JavaScript é unha linguaxe dirixida por eventos, e nós xa falamos dos eventos, lembrades aquelo de `onclick`,`onmousever`hai moitísimos máis.
+Dise que JavaScript é unha linguaxe dirixida por eventos, e nós xa falamos dos eventos, lembrades aquelo de `onclick`, `onmousever` hai moitísimos máis.
 
 ### 🧺 Preparación
 
@@ -57,7 +57,7 @@ Nestes casos as funcións teñen un nome rimbombante: *manexadores de eventos*
 
 ► cambia a función `sumita` por outra que concatene dúas cadeas de caracteres.
 
-► modifica `ducias2ovos`por unha función que pase de quilómetros a metros.
+► modifica `ducias2ovos` por unha función que pase de quilómetros a metros.
 
 Queda fatal que `document.write();` invada a páxina!! Imos ver de solucionalo
 
@@ -67,7 +67,7 @@ No ficheiro _.html_ escribimos unha páxina web que teña varios `input`. Lembra
 
 ```html
 <body>
-	<h2> Todo un pouco: html, css, js</h2>
+	<h2> Todo un pouco: html, css, js </h2>
 	<p> O teu nome: </p>  <input  id="nomecito">
 	<p> O teu apelido: </p>  <input  id="apelidazo">
 	<p>
@@ -77,7 +77,7 @@ No ficheiro _.html_ escribimos unha páxina web que teña varios `input`. Lembra
 </body>
 ``` 
 
-ou sexa temos un  titulazo, varios parágrafos, barras de texto para que usuario teclee o seu nome e outro parágrafo de entrada non ten nada... polo de agora....
+ou sexa temos un  titulazo, varios parágrafos, caixas de texto para que usuario teclee o seu nome e outro parágrafo de entrada non ten nada... polo de agora....
 
  Admito que os nomes dos identificadores son un tanto chorra, pero asi queda claro o que fago con eles, penso eu.
 
