--- a/_javascript/t12.md
+++ b/_javascript/t12.md
@@ -2,36 +2,19 @@
 layout: javascript
 title: Tarefa 12 - Propostas
 ---
-### Ferramentas
 
-Para traballar en local aconséllovos as [versións Portable](https://portableapps.com) de:
+Esta derradeira tarefa é voluntaria e  simplemente son propostas de traballo para entrenar:
 
-- Editor: Sublime, Notepad++, Atom, Brackets, VS Code.. 
-- Navegadores: Firefox, Chrome, Chromium, Opera,... Firefox Developer Edition
+### 🧺 Preparación
 
-### Ingredientes
-
-  Precisamos para cada proxecto unha carpeta que conteña os seguintes documentos:
-
-- *index.html*
-- *estilazo.css*
-- *escripito.js*
-
-No meu repositorio tes [unha pequena plantilla aquí](https://github.com/irocho/exerciciosJavascript/tree/master/exemplojs).
-
-### Novidades no código
-
-Na cabeceira do *.html* temos que chamar ós outros ficheiros, polo que cómpre engadir:
-
-```html
-    <link rel="stylesheet" href="estilazo.css">
-    <script type="text/javascript" src="escripito.js"></script>
-```
+Prepara unha carpeta á que imos chamar **tarefas12** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa: [ Tarefa 0: Crear infraestrutura](../t0)
 
 
-Calca no *.html* para ver a pinta da páxina web no navegador. Non parece moi interesante🤷
+### 🖥 Propostas:
 
-### O teu traballo
-
-1. Crea un novo repositorio no teu GitHub que se chame `JavaScript`
-2. Fabrica a túa propia plantilla para usar  cun *.html* outro *.css* e un *.js* Súbea ao teu repositorio para tela a man.
+1. Retoma o proxecto matemático da  [ Tarefa 3](../t3) e que xenere na páxina cadros de texto para que o usuario introduza neles dous números e mostre as operacións feitas na mesma páxina web.
+1. Mellora o teu .css con cambios de cor e tamaño nos botóns
+1. Retoma aquelo das cadeas da  [ Tarefa 4](../t4) e que mostre as rebanadas que desexe o usuario na mesma páxina web.
+1. Utilizando o código da  [ Tarefa 7](../t7) fai un formulario chulo para queos profes podamos meter as notas dos tres trimestres e nos devolva na mesma páxina a nota final dun alumno ou alumna.
+1. Volve ó proxecto da [ Tarefa 8](../t8) e refaino para que as preguntas as faga directamente na páxina web.
+1. Por suposto o noso programa estrela de cambios de moeda: todo, todo na mesma páxina.
