--- a/_javascript/t12.md
+++ b/_javascript/t12.md
@@ -12,9 +12,9 @@ Prepara unha carpeta á que imos chamar **tarefas12** que terá coma sempre un *
 
 ### 🖥 Propostas:
 
-1. Retoma o proxecto matemático da  [ Tarefa 3](../t3) e que xenere na páxina cadros de texto para que o usuario introduza neles dous números e mostre as operacións feitas na mesma páxina web.
-1. Mellora o teu .css con cambios de cor e tamaño nos botóns
-1. Retoma aquelo das cadeas da  [ Tarefa 4](../t4) e que mostre as rebanadas que desexe o usuario na mesma páxina web.
-1. Utilizando o código da  [ Tarefa 7](../t7) fai un formulario chulo para queos profes podamos meter as notas dos tres trimestres e nos devolva na mesma páxina a nota final dun alumno ou alumna.
-1. Volve ó proxecto da [ Tarefa 8](../t8) e refaino para que as preguntas as faga directamente na páxina web.
+1. Retoma o proxecto matemático da [Tarefa 3](../t03) e que xenere na páxina cadros de texto para que o usuario introduza neles dous números e mostre as operacións feitas na mesma páxina web.
+1. Mellora o teu _.css_ con cambios de cor e tamaño nos botóns.
+1. Retoma aquelo das cadeas da  [ Tarefa 4](../t04) e que mostre as rebanadas que desexe o usuario na mesma páxina web.
+1. Utilizando o código da  [ Tarefa 7](../t07) fai un formulario chulo para queos profes podamos meter as notas dos tres trimestres e nos devolva na mesma páxina a nota final dun alumno ou alumna.
+1. Volve ó proxecto da [ Tarefa 8](../t08) e refaino para que as preguntas as faga directamente na páxina web.
 1. Por suposto o noso programa estrela de cambios de moeda: todo, todo na mesma páxina.
