Engadiuse un novo recurso
Ola, engadín un novo recurso para math ceil() en javascript que será útil para o artigo. Atopei este tutorial cando buscaba algúns materiais que me axudasen a aprender JavaScript. Esta referencia fará que o contido sexa máis valioso. Espero que esta pequena contribución axude a outros alumnos.

--- a/_javascript/t03.md
+++ b/_javascript/t03.md
@@ -47,3 +47,5 @@ Sube ao teu repositorio en GitHub nunha carpeta á que chamaremos **tarefa3_mate
 * [math.js](https://mathjs.org/)
 
 * [JavaScript, GeeksforGeeks](https://www.geeksforgeeks.org/javascript-math-object/)
+
+* [Match ceil(), Scaler Topics](https://www.scaler.com/topics/math-ceil-javascript/)
