--- a/_python/t0.md
+++ b/_python/t0.md
@@ -1,45 +1,34 @@
 ---
 layout: python
 title: Tarefa 0 - Crear infraestrutura 
+published: true
 ---
-### Ferramentas
+
+
+### 🧺 Ingredientes
+
+Cada proxecto será un ficheiro.py que tedes que subir ao voso repositorio persoal.
+
+No meu repositorio tes [unha pequena plantilla aquí](https://github.com/irocho/pythonBAC/blob/master/00_inicial.py).
+
+
+### 🖥 O que debes facer:
+
+1. Crea un repositorio no teu GitHub para estes proxectiños.
+2. Vai subindo os ficheiros.py que imos tecleando en cada tarefa. Ponlles de nome o que se indica para que  deamos organizado todo ben.
+
+
+
+### ✏️ Ferramentas
 
 Para traballar en local xogaremos no terminal tecleando
 
 - `python3`
 - `ipython`
 
-Se queredes ser un chisco máis pro e empregar un editor aconséllovos: 
-- Editor: Sublime, Notepad++, Atom, Brackets, Codium, VS Code.. 
+Tamén imos usar o IDE chamado VSCodium.
+
+Se queredes ser un chisco máis pro e empregar un editor aconséllovos calquera dos editores:  Notepad++, BlueFish, Brackets,  VS Code.. 
 
 Tedes tamén as [versións Portable para Windows](https://portableapps.com)
 
-
-
-<!-- 
-### Ingredientes
-
-  Precisamos para cada proxecto unha carpeta que conteña os seguintes documentos:
-
-- *index.html*
-- *estilazo.css*
-- *escripito.js*
-
-No meu repositorio tes [unha pequena plantilla aquí](https://github.com/irocho/exerciciospython/tree/master/exemplojs).
-
-### Novidades no código
-
-Na cabeceira do *.html* temos que chamar ós outros ficheiros, polo que cómpre engadir:
-
-```html
-    <link rel="stylesheet" href="estilazo.css">
-    <script type="text/python" src="escripito.js"></script>
-```
-
-
-Calca no *.html* para ver a pinta da páxina web no navegador. Non parece moi interesante🤷
-
-### O teu traballo
-
-1. Crea un novo repositorio no teu GitHub que se chame `python`
-2. Fabrica a túa propia plantilla para usar  cun *.html* outro *.css* e un *.js* Súbea ao teu repositorio para tela a man. -->
