--- a/_python/t02.md
+++ b/_python/t02.md
@@ -1,10 +1,11 @@
 ---
 layout: python
 title: Tarefa 2 - Variables
+published: true
 ---
 ### A nosa primeira variable
 
-Imos complicalo un chisco. Se non poñemos comiñas na tarefa anterior python entende que ten que poñer na ventá emerxente o valor dunha variable.😰
+Imos complicalo un chisco. Se non poñemos comiñas na tarefa anterior python entende que ten que poñer o valor dunha variable.😰
 
 ### 🧺 Preparación
 
@@ -14,16 +15,16 @@ Podemos comezar co mesmo que na anterior tarefa:
 
 ### 🖥 Código
 
-No ficheiro *.js* tecleamos a seguinte liña de código:
+No ficheiro *tarefa2.py* tecleamos a seguinte liña de código:
 
 ```python
     gastoHoxe = 10
     print(gastoHoxe)
 ```
 
-No código declaramos unha variable chamada `gastoHoxe` e démoslle o valor 10. 
 
-Esto significa que na memoria do ordenador reservamos unha parte á que lle chamamos *gastoHoxe* e decimos o que vai quedar gardado alí
+Esto significa que na memoria do ordenador reservamos unha parte á que lle chamamos *gastoHoxe* e decimos  que garde alí  un 10. Falando máis tecnicamente, no código declaramos unha variable chamada `gastoHoxe` e dámoslle o valor 10. 
+
 
 
 ### ✏️ Variacións: contas diarias
@@ -37,7 +38,7 @@ Fai un pequeno cambio:
     print(total);
 ```
 
-No código creamos tres variables, metimos nelas uns numeritos, aínda que na terceira variable mandámoslle facer a python a suma. Parece que a fixo ben. 
+No código creamos tres variables, metimos nas dúas primeiras uns numeritos e na terceira variable mandámoslle facer unha suma. Parece que a fixo ben. 
 
 Inventa todas as variacións que se te ocurran: con sumas, decimais, restas, multiplicacións, mellor non con algunhas divisións 😇... 
 
