--- a/_python/t03.md
+++ b/_python/t03.md
@@ -6,7 +6,7 @@ title: Tarefa 3 - Mates
 
 E como se fai unha raíz cadrada? Benvidos ao fascinante mundo das bibliotecas (ou librerías) das linguaxes de programación.
 
-Sumar, restar e multiplicar sabe facelo sen problema pero se queremos unha conta  matemática máis complexa temos que solicitar unha biblioteca de funcións.
+Sumar, restar e multiplicar sabe facelo calquera pero se queremos unha conta  matemática máis complexa temos que solicitar unha biblioteca de funcións. Cando unha función non vén de fábrica pode ser que estea nunha biblioteca, en cal? Seguro que en internet obtemos información.
 
 ### 🧺 Preparación
 
@@ -20,19 +20,17 @@ Tecleamos:
 import math
 print (math.sqrt(25))
 ```
-Notades o que fai? A primeira liña trae funcións para que podamos usar   dunha biblioteca que se chama *math* e que está dispoñible.  Cómpre buscar en internet como se chaman as funcións que podemos usar.
+Notades o que fai? A primeira liña trae unha biblioteca que se chama *math*.  Cómpre volver a internet para averigur como se chaman as funcións que trae.
 
-O que facemos na segunda liña é usar `math.sqrt()`que vén sendo como se chama a función para calcular a raíz cadrada  usando a librería *math*
+O que facemos na segunda liña é usar `math.sqrt()`que vén sendo como se chama a función para calcular a raíz cadrada  usando a librería *math* (tiven que buscalo por internet, non pensedes que me sei todas as funcións desta biblioteca de memoria)
 
-Cando unha función non vén de fábrica pode ser que estea nunha biblioteca. No noso caso a función ***sqrt()*** forma parte da biblioteca ***math*** polo que  se indica como `math.sqrt();`
+ No noso caso a función ***sqrt()*** forma parte da biblioteca ***math*** polo que  teclearemos `math.sqrt();`
 
 
 Imos complicalo un chisco máis:
 ```python
     moito = 9 ;
 print (math.sqrt(moito))
-
-print (math.sqrt(16))
 ```
 
 
