--- a/_python/t04.md
+++ b/_python/t04.md
@@ -1,55 +1,39 @@
 ---
 layout: javascript
-title: Tarefa 4 - Cadeas
-published: false
+title: Tarefa 5 - Charlando... ^^
+published: true
 ---
-### As nosas segundas variables `var` ou `let`
+### Que tal se o noso programa pregunta?
 
-Alguén sabe o que significa sumar palabras? JavaScript é quen de facelo.
+Uso unha variable coma sempre pero agora será o usuario o que lle dea valor
 
 ### 🧺 Preparación
 
-Precisamos unha carpeta á que imos chamar **tarefa4_cadeas** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa:
+Precisamos un ficheiro ao que imos chamar **tarefa4_pregunta.py** Facemos o mesmo que na anterior tarefa:
 
 [ Tarefa 0: Crear infraestrutura](../t0)
 
-### 💻 Código
+### 🖥 Código
 
-No ficheiro *.js* tecleamos:
+No ficheiro *.py* tecleamos:
 
-```js
-    var euSon = "Profe" + " que " + " conta " + " JavaScript ";
-    alert(euSon);
+```python
+    resposta = input("Como te chamas?   ");
+    print("Guau... que nome máis interesante " , resposta);
+    print("Ti es unha grande persoa " , resposta);
+    print("Vales moito " , resposta);
+    print("Non hai ninguén máis elegante ca " , resposta);
+    print("e... " , resposta , ", o mundo adórate!");
 ```
 
-### 🎞 Visualizar o javascript
+### 🎞 Executar
 
-Calcamos no *.html* e debería abrirse o navegador mostrando o resultado do noso código.
-
-### ✏️ Cambios interesantes
-
-Para facer un salto de liña:
-```js
-    var euSon = "Profe" + " que " + " conta " + "\n" +" JavaScript ";
-    alert(euSon);
+Lembra teclear:
+```bash
+python tarefa4_pregunta.py
 ```
 
-Agora imaxina ti o que fai un método chamado  `.length` *Certo que un chisco de inglés axuda* 
+Subidón de autoestima se pos o teu nome!!!!
 
-```js
-    var oficio = "Profe";
-    var longura = oficio.length;
-    alert(longura);
-```
+Sube o teu ficheiro ao teu repositorio.
 
-Agora imaxina ti o que fai unha nova función que trae de fábrica chamada  `.slice();`  *Certo que un chisco de inglés tamén axuda* 
-
-```js
-    var oficio = "Profe";
-    var rebanada = oficio.slice(3,5);
-    alert(rebanada);
-```
-
-Busca por internet máis funcións e métodos que se usen con cadeas. Por exemplo que atope a posición dunha letra ou palabra no medio dunha cadea de caracteres ... Fai as túas anotacións.
-
-Estamos aprendendo moito: funcións, métodos, variables, cadeas, bibliotecas...👏👏. 
