--- a/_python/t05.md
+++ b/_python/t05.md
@@ -1,59 +1,48 @@
 ---
 layout: javascript
-title: Tarefa 5 - Charlando... ^^
+title: Tarefa 5 - Detalle cos números
 published: false
 ---
-### Que tal se a páxina nos pregunta algo e respondemos?
 
-Declaro unha variable coma sempre pero agora será o usuario o que lle dea valor
+Na [ tarefa anterior](../t4) o noso código preguntaba e a resposta era o que tecleaba o usuario. Se a resposta é un número e quero usalo despois para facer contas a cousa complícase un nadita.
+
+Python considera que o que contesta o usuario é sempre "letras" que aquí se chaman _cadeas_ e non sabe facer operacións matemáticas co cadeas. 
 
 ### 🧺 Preparación
 
-Precisamos unha carpeta á que imos chamar **tarefa5_animados** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa:
+Precisamos un ficheiro ao que imos chamar **tarefa5_numeritos** Podemos facer o mesmo que antes:
 
 [ Tarefa 0: Crear infraestrutura](../t0)
 
-### 🖥 Código
+### 💻 Código
 
-No ficheiro *.js* tecleamos:
 
-```js
-    var nome;
-    nome = prompt("Como te chamas?   ");
-    alert("Guau... que nome máis interesante " + nome);
-    alert("Ti es unha grande persoa " + nome);
-    alert("Vales moito " + nome);
-    alert("Non hai ninguén máis elegante ca " + nome);
-    alert("e... " + nome + ", o mundo adórate!");
+😭😭 Python decide que o que teclea o usuario é unha cadea. Razón? pois así son as cousas🤷
+
+Haberá que transformar o que di o usuario nun número "de verdade" para facer contas con el. O truco é a función **int()**
+
+```python
+contestado = input("Cal é o teu número favorito? ")
+numerito = int(contestado)
+print("O triple do teu número favorito é.... ", numerito*3)
 ```
 
-### 🎞 Visualizar o javascript
 
-Calcamos no *.html* e debería abrirse o navegador mostrando o resultado do noso código.
-
-Subidón de autoestima se pos o teu nome!!!!
-
-### Pero.....
-
-O que teclea o usuario é un número ou unha cadea?? 
-
-😭😭 JavaScript decide que o que teclea o usuario é unha cadea. 
-
-Razón? pois así son as cousas🤷
-
-Haberá que transformar o que di o usuario nun número se queremos facer contas con el.
 
 ## ☁️        Proxecto para convertir ovos e ducias        ☁️
 
 *Aclaración: unha ducia son 12 ovos*
 
-1. Prepara unha carpeta coma sempre, chamada **tarefa5_ducias2ovos**
-2. Declara unha variable na que gardar as ducias. 
-3. Pregunta ao usuario cantas ducias de ovos leva unha tortilla usando `prompt();`. Convirte a resposta do usuario a número con `parseInt();`
-4. Mostra nunha alerta o que dixo o usuario convertido a número.
+1. Prepara  **tarefa5_ducias2ovos.py**
+2. Pregunta ao usuario cantas ducias de ovos leva a sú tortilla usando `input();`. 
+3. Convirte a resposta do usuario a número con `int();`
+4. Mostra o que dixo o usuario convertido a número.
 5. Fai a conta correspondente para saber cantos ovos leva esa megatortilla.
-6. Mostra nunha alerta o resultado do número de ovos
+6. Mostra o resultado do número de ovos
 
-Sube ao teu repositorio a carpeta deste proxecto chamada **tarefa5_ducias2ovos**
+Sube ao teu repositorio deste proxecto chamada **tarefa5_ducias2ovos.py**
+
+
+### ✏️ Cambios interesantes
 
 Quen pasa de ducias a ovos pasa tamén de km a metros ou de euros a dólares.... 
