modicado no servidor

--- a/_python/t01.md
+++ b/_python/t01.md
@@ -8,10 +8,7 @@ published: true
 Comezamos co noso primeiro código en python empregando unha función que trae de fábrica. É unha palabra en inglés e xusto despois parénteses. O interesante vai nas parénteses.
 
 ### 🧺 Preparación
-Abre un terminal en Linux e teclea directamente
-```python
-    python3
-```
+Abre un IDE para teclear o código, p.e. VSCodium e crea un ficheiro novo que se chame _tarefa1.py_ Lembra onde o gardas, suxiro que  o fagas no escritorio ou nunha carpeta.
 
 
 ### 🖥 Código
@@ -24,11 +21,16 @@ Tecleamos a seguinte liña de código:
 
 ### 🎞 Visualizar o python
 
+Abre un terminal en Linux e teclea directamente
+```python
+    python3 tarefa1.py
+```
+
 Simplemente con *Enter* deberías ver o que fai a túa función. Non parece difícil, ou?
 
 ### ✏️ Cambios interesantes
  
-Fai un pequeno cambio para xogar con números:
+Engade outras liñas de código para xogar con números:
 
 ```python
     print("2+2");
