--- a/_python/t04.md
+++ b/_python/t04.md
@@ -1,6 +1,6 @@
 ---
 layout: javascript
-title: Tarefa 5 - Charlando... ^^
+title: Tarefa 4 - Preguntando
 published: true
 ---
 ### Que tal se o noso programa pregunta?
