--- a/_python/t01.md
+++ b/_python/t01.md
@@ -1,9 +1,9 @@
 ---
 layout: python
-title: Tarefa 1 - print();
+title: Tarefa 1 - Función print()
 published: true
 ---
-## A nosa primeira función será `print();`
+## A nosa primeira función será `print()`
 
 Comezamos co noso primeiro código en python empregando unha función que trae de fábrica. É unha palabra en inglés e xusto despois parénteses. O interesante vai nas parénteses.
 
