--- a/_python/t04.md
+++ b/_python/t04.md
@@ -18,12 +18,12 @@ Precisamos un ficheiro ao que imos chamar **tarefa4_pregunta.py** Facemos o mesm
 No ficheiro *.py* tecleamos:
 
 ```python
-    resposta = input("Como te chamas?   ");
-    print("Guau... que nome máis interesante " , resposta);
-    print("Ti es unha grande persoa " , resposta);
-    print("Vales moito " , resposta);
-    print("Non hai ninguén máis elegante ca " , resposta);
-    print("e... " , resposta , ", o mundo adórate!");
+    resp = input("Como te chamas?   ");
+    print("Guau... que nome máis interesante " , resp);
+    print("Ti es unha grande persoa " , resp);
+    print("Vales moito " , resp);
+    print("Non hai ninguén máis elegante ca " , resp);
+    print("e... " , resp , ", o mundo adórate!");
 ```
 
 ### 🎞 Executar
