--- a/_python/t05.md
+++ b/_python/t05.md
@@ -4,9 +4,9 @@ title: Tarefa 5 - Detalle cos números
 published: false
 ---
 
-Na [ tarefa anterior](../t4) o noso código preguntaba e a resposta era o que tecleaba o usuario. Se a resposta é un número e quero usalo despois para facer contas a cousa complícase un nadita.
+Na [tarefa anterior](../t4) o noso código preguntaba e  **resp** era o nome da variable que tiña o que tecleaba o usuario. Se  **resp** é un número e quero usalo despois para facer contas matemáticas a cousa complícase un nadita.
 
-Python considera que o que contesta o usuario é sempre "letras" que aquí se chaman _cadeas_ e non sabe facer operacións matemáticas co cadeas. 
+Python considera que o que contesta o usuario é sempre "letras" que aquí se chaman _cadeas._ Python non sabe facer operacións matemáticas con cadeas. Cómpre converter as cadeas en enteiros ou noutro tipo de números.
 
 ### 🧺 Preparación
 
