--- a/_python/t06.md
+++ b/_python/t06.md
@@ -4,18 +4,18 @@ title: Tarefa 6 - Condicionais
 published: false
 ---
 
-Se entendes esto daquela non terás problema cos condicionais no caso contrario... vas ter que analizalo con calma. Ou o que vén sendo o mesmo: `if (`entendes `==` si`) {`No problem`} else {`analiza con calma`}`
+Se entendes esto daquela non terás problema cos condicionais, no caso contrario... vas ter que analizalo con calma. Ou o que vén sendo o mesmo: `if (`entendes `==` si`) {`No problem`} else {`Analiza con calma`}`
 
 ### 🧺 Preparación
 
-Precisamos unha carpeta á que imos chamar **tarefa6_condicionais** que terá coma sempre un *.html* xunto cun *.css* e tamén un *.js.* Podemos facer o mesmo que na anterior tarefa:
+Precisamos un ficheiro ao que imos chamar **tarefa6_condicionais.py** Podemos facer o mesmo que na anterior tarefa:
 
 [ Tarefa 0: Crear infraestrutura](../t0)
 
 ### 🖥 Código 1
 
-No ficheiro *.js* tecleamos:
-```js
+No ficheiro *.py* tecleamos:
+```python
 
     var posicion = 3;
     if(posicion == 1) {
